k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecume-frontend
  namespace: ecume
spec:
  type: ClusterIP
  selector:
    app: ecume-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
